# sentinel_drone

./: .gitmodules  README.md
sentinel_drone/: CMakeLists.txt  package.xml
sentinel_drone/launch/: task_1_submission.launch  task_2_submission.launch  task_2c.launch  task_2c_submission.launch  task_2d.launch  task_2d_submission.launch  task_4a.launch  task_4a_submission.launch  usb_cam-test.launch  usb_cam_SD.launch  whycon.launch
sentinel_drone/msg/: Geolocation.msg
sentinel_drone/scripts/: SD_1748_position_hold.bag  controller.py  position_hold.py  ros_stream.py
sentinel_drone_driver/: CMakeLists.txt  package.xml
sentinel_drone_driver/msg/: PIDError.msg  RCMessage.msg
sentinel_drone_driver/scripts/: driver.py  utils.py
sentinel_drone_driver/srv/: CommandBool.srv
task_1/rotors_description/: package.xml
task_1/rotors_description/meshes/: edrone_frame.stl  edrone_motor.stl
task_1/rotors_description/models/arena/: arena.mtl  model.config  model.sdf
task_1/rotors_description/models/whycon_marker/meshes/: whycon_marker.dae
task_1/rotors_description/models/yellow_box/: box.mtl  model.config  model.sdf
task_1/rotors_description/urdf/: component_snippets.xacro  edrone.xacro  edrone_base.xacro  multirotor_base.xacro  whycon_marker_file.xacro
task_1/rotors_edrone_interface/: CMakeLists.txt  package.xml
task_1/rotors_edrone_interface/include/rotors_edrone_interface/: edrone_trans.h
task_1/rotors_edrone_interface/src/: edrone_trans.cpp
task_1/rotors_gazebo/: CMakeLists.txt
task_1/rotors_gazebo/launch/: edrone_with_edrone_msg.launch  edrone_with_edrone_msg_arena.launch  edrone_with_edrone_msg_arena_2d.launch  spawn_mav.launch
task_1/rotors_gazebo/resource/: edrone.yaml  roll_pitch_yawrate_thrust_controller_edrone.yaml  roll_pitch_yawrate_thrust_controller_edrone_big.yaml
task_1/rotors_gazebo/src/: hovering_example.cpp
task_1/rotors_gazebo/worlds/: basic_edrone.world  basic_edrone_2d.world  marker_spawn.world
task_1/rotors_gazebo_plugins/: CMakeLists.txt
task_1/rotors_gazebo_plugins/src/: gazebo_odometry_plugin.cpp
task_1/task_1/: CMakeLists.txt  package.xml
